# pandaprobe-harness

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.sandbox  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  contract.yml  release.yml
benchmarks/: .env.example  IMPLEMENTATION_NOTES.md  Makefile  README.md  RUNNING.md  pyproject.toml
benchmarks/configs/: models.yaml  study.yaml
benchmarks/configs/benchmarks/: appworld.yaml  tau2.yaml  terminal_bench.yaml
benchmarks/results/summary/: all_records.csv  harness_telemetry.csv  headline.csv  report.md
benchmarks/scripts/: labels_from_records.py  setup_appworld.sh
benchmarks/src/pandabench/: __init__.py  checkpoints.py  cli.py  config.py  harness_glue.py  metrics.py  report.py  results.py
benchmarks/src/pandabench/adapters/: __init__.py  harbor_agent.py  tau2_agent.py
benchmarks/src/pandabench/agents/: __init__.py  harness_wiring.py  loop.py
benchmarks/src/pandabench/providers/: __init__.py  litellm_client.py  models.py  tracing.py
benchmarks/src/pandabench/runners/: __init__.py  appworld.py  appworld_env.py  base.py  mock.py  tau2.py  terminal_bench.py
benchmarks/tests/: test_glue_and_results.py  test_metrics.py  test_pipeline_smoke.py  test_providers.py
docs/: benchmark-study-brief.md  paper-arxiv-brief.md  paper-draft-brief.md  v0.6-closed-loop-self-heal-brief.md
examples/: README.md  calibration_demo.py  claude_agent_sdk_agent.py  closed_loop_self_heal.py  crewai_agent.py  langgraph_agent.py  offline_self_heal.py  openai_agents_agent.py
migrations/: Makefile  alembic.ini  env.py  models.py  pyproject.toml  settings.py
migrations/versions/: 0001_create_memory_nodes.py
paper/: .gitignore  README.md  main.tex  references.bib
paper/aaai/: README.md  references.bib
paper/aaai/figures/: results.tex
paper/arxiv/: README.md  main.tex  references.bib
paper/arxiv/figures/: overview.tex  results.tex
paper/figures/: overview.tex
src/pandaprobe_harness/: __init__.py  _version.py  calibration.py  config.py  harness.py
src/pandaprobe_harness/adapters/: __init__.py  _base.py  _langchain.py  _session.py  autogen.py  claude_agent_sdk.py  crewai.py  deepagents.py  langchain.py  langgraph.py  openai_agents.py  protocol.py  raw_loop.py
src/pandaprobe_harness/agent_tools/: __init__.py  __main__.py  companion.py  native.py  spec.py  toolset.py
src/pandaprobe_harness/cli/: __init__.py  client.py  errors.py  models.py  subprocess_client.py
src/pandaprobe_harness/evaluation/: __init__.py  evaluator.py  history.py  history_source.py  metrics.py  thresholds.py  trends.py
src/pandaprobe_harness/filesystem/: __init__.py  layout.py
src/pandaprobe_harness/filesystem/templates/: harness_rules.md
src/pandaprobe_harness/hook/: __init__.py  alert.py  context.py  core.py  turn.py
src/pandaprobe_harness/monitors/: __init__.py  client.py
src/pandaprobe_harness/sandbox/: __init__.py  policy.py  shell.py
src/pandaprobe_harness/validation/: __init__.py  regression.py  validator.py
src/pandaprobe_harness/workspace/: __init__.py  _io.py  evalset.py  journal.py  mailbox.py  rules.py  sanitize.py
tests/: conftest.py  e2e_closed_loop_test.py  e2e_concurrency_test.py  e2e_harness_test.py  e2e_pull_loop_test.py
tests/contract/: test_cli_contract.py
tests/contract/fixtures/: notice.json  run_created.json  run_scores_terminal.json  session_scores_list.json
tests/docker/: test_sandbox_build.py
tests/fakes/: fake_cli_client.py  mock_agent.py
tests/integration/: test_extras_wiring.py  test_schema.py
tests/unit/: test_adapters_claude.py  test_adapters_crewai.py  test_adapters_langchain_family.py  test_adapters_langgraph.py  test_adapters_openai.py  test_adapters_raw_loop.py  test_agent_tools.py  test_alert.py  test_calibrate_cli.py  test_calibration.py  test_cli_errors.py  test_cli_models.py  test_cli_subprocess_client.py  test_companion_cli.py  test_config.py  test_context.py  test_evalset.py  test_evaluator.py  test_filesystem_layout.py  test_harness_facade.py  test_history.py  test_history_source.py  test_hook_circuit_breaker.py  test_hook_controls.py  test_hook_core.py  test_hook_dedup.py  test_hook_trend.py  test_hook_validation.py  test_journal.py  test_mailbox.py  test_models.py  test_monitor_client.py  test_regression.py  test_regression_cli.py  test_review_regressions.py  test_rules_lifecycle.py  test_rules_retrieval.py  test_rules_store.py  test_sanitize.py  test_settings.py  (+6 more)
