[project]
name = "pandaprobe-harness"
version = "0.3.0"
description = "Meta-cognitive diagnostic sandbox harness for PandaProbe-instrumented agents."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Apache-2.0" }
dependencies = [
    # Reserved for a future direct-HTTP CliClient / platform connectors. The
    # harness shells out to the `pandaprobe` CLI today and needs no runtime deps.
    "httpx>=0.27",
]

[project.optional-dependencies]
# Real-framework adapters are optional, import-guarded extras so the core
# install and the test suite stay lean and fully offline.
langgraph = ["langgraph>=0.2"]
crewai = ["crewai>=0.41"]
autogen = ["pyautogen>=0.2"]
all = ["pandaprobe-harness[langgraph,crewai,autogen]"]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pandaprobe_harness"]

[tool.hatch.build.targets.wheel.force-include]
"src/pandaprobe_harness/filesystem/templates" = "pandaprobe_harness/filesystem/templates"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
# ASYNC109: `timeout` parameters are an intentional part of the CliClient API
# (they mirror subprocess timeout semantics), not a misuse of asyncio.
ignore = ["ASYNC109"]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src"]
# Optional framework adapters import third-party libs that may be absent.
ignore_missing_imports = true
