[project]
name = "pandaprobe-harness"
version = "0.3.0"
description = "Meta-cognitive diagnostic sandbox harness for PandaProbe-instrumented agents."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Apache-2.0" }
# The harness core has NO runtime dependencies — it only shells out to the
# `pandaprobe` CLI through a stdlib subprocess seam. Framework adapters add their
# own optional deps via the extras below.
dependencies = []

[project.optional-dependencies]
# Real-framework adapters are optional, import-guarded extras so the core
# install and the test suite stay lean and fully offline. They depend on the
# PandaProbe SDK to reuse its session ContextVar (harness/traces share a session).
# Version pins mirror the SDK's own integration extras.
langgraph = ["langgraph>=0.2", "langchain-core>=0.3", "pandaprobe>=0.4"]
langchain = ["langchain>=1.0.0", "langchain-core>=0.3.0", "pandaprobe>=0.4"]
deepagents = ["deepagents>=0.6.1", "langchain-core>=0.3.0", "pandaprobe>=0.4"]
crewai = ["crewai>=0.100", "wrapt>=1.14", "pandaprobe>=0.4"]
claude-agent-sdk = ["claude-agent-sdk>=0.1.0", "wrapt>=1.14.0", "pandaprobe>=0.4"]
openai-agents = ["openai-agents>=0.13.0", "pandaprobe>=0.4"]
all = [
    "pandaprobe-harness[langgraph,langchain,deepagents,crewai,claude-agent-sdk,openai-agents]"
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pandaprobe_harness"]

[tool.hatch.build.targets.wheel.force-include]
"src/pandaprobe_harness/filesystem/templates" = "pandaprobe_harness/filesystem/templates"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
# ASYNC109: `timeout` parameters are an intentional part of the CliClient API
# (they mirror subprocess timeout semantics), not a misuse of asyncio.
ignore = ["ASYNC109"]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src"]
# Optional framework adapters import third-party libs that may be absent.
ignore_missing_imports = true
