[project]
name = "pandaprobe-harness"
dynamic = ["version"]
description = "Meta-cognitive diagnostic sandbox harness for PandaProbe-instrumented agents."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
# The harness core has NO runtime dependencies — it only shells out to the
# `pandaprobe` CLI through a stdlib subprocess seam. Framework adapters add their
# own optional deps via the extras below.
dependencies = []

[project.scripts]
# The agent-facing companion CLI (allow-listed in the sandbox shell policy so
# sandboxed agents can self-diagnose without allow-listing `python`).
pandaprobe-harness-agent = "pandaprobe_harness.agent_tools.companion:main"
# Operator CLIs (not part of the sandbox allow-list): regression runs over the
# replayable eval-set, and offline metric-threshold calibration.
pandaprobe-harness-eval = "pandaprobe_harness.validation.regression:main"
pandaprobe-harness-calibrate = "pandaprobe_harness.calibration:main"

[project.optional-dependencies]
# Real-framework adapters are optional, import-guarded extras so the core
# install and the test suite stay lean and fully offline. They depend on the
# PandaProbe SDK to reuse its session ContextVar (harness/traces share a session).
# Version pins mirror the SDK's own integration extras.
langgraph = ["langgraph>=0.2", "langchain-core>=0.3", "pandaprobe>=0.4"]
langchain = ["langchain>=1.0.0", "langchain-core>=0.3.0", "pandaprobe>=0.4"]
deepagents = ["deepagents>=0.6.1", "langchain-core>=0.3.0", "pandaprobe>=0.4"]
crewai = ["crewai>=1.15.1", "wrapt>=1.14", "pandaprobe>=0.4"]
claude-agent-sdk = ["claude-agent-sdk>=0.1.0", "wrapt>=1.14.0", "pandaprobe>=0.4"]
openai-agents = ["openai-agents>=0.13.0", "pandaprobe>=0.4"]
all = [
    "pandaprobe-harness[langgraph,langchain,deepagents,crewai,claude-agent-sdk,openai-agents]"
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "twine>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
# Single source of truth; the release workflow triggers on changes to it.
path = "src/pandaprobe_harness/_version.py"

[tool.hatch.build.targets.wheel]
# Non-Python package data (the harness_rules.md template) is included by
# default because it lives inside the package directory.
packages = ["src/pandaprobe_harness"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]
# The `benchmarks/` sub-project is a separate uv project with its own ruff
# config; keep the package's `ruff check .` (make lint + CI) out of it.
extend-exclude = ["benchmarks"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
# ASYNC109: `timeout` parameters are an intentional part of the CliClient API
# (they mirror subprocess timeout semantics), not a misuse of asyncio.
ignore = ["ASYNC109"]

[tool.ruff.lint.per-file-ignores]
# Async tests assert on files synchronously by design — nothing to unblock.
"tests/**" = ["ASYNC230", "ASYNC240"]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src"]
# Optional framework adapters import third-party libs that may be absent.
ignore_missing_imports = true
